Added team section

--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,10 @@ p {
   font-size: 1.08rem;
 }
 
+a {
+  text-decoration: none !important;
+}
+
 .tag {
   font-size: 1.2rem !important;
   color: var(--secondary-color, #23a2db);
@@ -55,13 +59,18 @@ p {
 }
 
 #button {
-  background-color: var(--secondary-color, #23a2db);
-  color: white;
+  background-color: transparent;
+  color: var(--secondary-color);
+  border: 1px solid var(--secondary-color);
   font-weight: bold;
+  width: fit-content;
+  transition: all 0.4s ease-out;
 }
 
 #button:hover {
-  background-color: #1d7ca5;
+  background-color: white;
+  color: black;
+  border: 1px solid white;
 }
 
 /* Navbar */
@@ -330,6 +339,32 @@ p {
   line-height: 1.6;
 }
 
+#brochure-section {
+  background: rgb(50, 59, 145);
+  background: linear-gradient(
+    90deg,
+    rgba(50, 59, 145, 1) 40%,
+    rgba(35, 162, 219, 1) 100%
+  );
+}
+
+#cta-section {
+  background-image: url("/images/cta-bg.png");
+  background-position: center;
+  background-size: cover;
+}
+
+.cta-circle {
+  width: 400px;
+  height: 400px;
+  border-radius: 50%;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  align-items: center;
+}
+
 /* Testimonials Section */
 .testimonial-card {
   border: 1px solid rgba(0, 0, 0, 0.1);
@@ -445,6 +480,13 @@ p {
 }
 
 /* service */
+.service-img {
+  width: 300px;
+  height: 300px;
+  border: 2px solid var(--secondary-color);
+  border-radius: 20px 0 20px 0;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
 
 /* Footer */
 
